สร้างไฟล์ main.go เพื่อเขียนโปรแกรมสำหรับสร้าง server - fix #59
